# ob

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  g.sh  jot.yaml  replace_config.yaml  toc.xml
.claude/: README.md  settings.json
.claude/agents/: docs-aware-developer.md
.claude/agents/rust/: benchmark-creator.md  error-handler.md  module-splitter.md  pattern-optimizer.md  preset-migrator.md  test-writer.md
.claude/context/: current-focus.md  implementation-patterns.md
.claude/hooks/: README.md  context_reminder.py  git_sync.py  git_sync_config.json  preserve_docs_context.py  protodoc.md  smart_doc_loader.py
.claude/hooks/logging/: command_logger.py
.claude/hooks/oober/: post_edit.py  pre_edit.py  prompt_analyzer.py
.claude/hooks/validation/: README.md  base_validator.py  command_validator.py  file_validator.py  pattern_validator.py  security_validator.py  validation_config.json  (+1 more)
config/: example.yaml  swap.yaml
docs/: CHANGELOG.md  CLAUDE.md  context-aware-system.md  context-system-quick-ref.md  context-system-troubleshooting.md  git-sync-hook-guide.md  notes.md
docs/eng-practices/: jot.yaml  toc.xml
docs/guides/: guide.md
patterns/: fix_dusk_copyright.yaml  grammar_patterns.yaml  remove_copyright_new.yaml  replace_config.yaml
patterns/internal/: emojis.yaml  ha.yaml  human_analytics_patterns.yaml  log_patterns.yaml  secret_patterns.yaml
scripts/: g.sh  get.sh  oober.sh  run.sh
src/: cli.rs  config.rs  errors.rs  file_renamer.rs  fingerprint.rs  lib.rs  main.rs  output_formatter.rs  patterns.rs  replacer.rs  scanner.rs  state_manager.rs
(+17 files in other folders)
