[package]
name = "oober"
version = "0.1.1"
edition = "2024"

[dependencies]
ignore = "0.4"
regex = { version = "1.9", features = ["perf-dfa", "perf-literal"] }  # SIMD-powered regex engine with performance features
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_json = "1.0"
clap = { version = "4.5.38", features = ["derive", "env"] }
rayon = "1.8"                                                  # Parallel processing
chrono = { version = "0.4", features = ["serde"] }            # For backup timestamps
tempfile = "3.8"                                               # For safe file writing
thiserror = "1.0"                                              # Error handling derive macro
indicatif = "0.17"                                             # Progress bars
num_cpus = "1.16"                                              # CPU count detection
sha2 = "0.10"                                                  # File fingerprinting
dirs = "5.0"                                                   # XDG directories
csv = "1.3"                                                    # CSV output format
anyhow = "1.0"                                                 # Error handling
async-trait = "0.1"                                            # Async traits
futures = "0.3"                                                # Async utilities
walkdir = "2.4"                                                # Directory walking
